--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -909,6 +909,7 @@
   "Year": "Tahun",
   "Instant Savings": "Penhematan Langsung",
   "Current Status": "Status Saat Ini",
+  "Basic Model": "Model Dasar",
   "Foundation Models": "Model Dasar",
   "Advanced Models": "Model Lanjutan",
   "Top-Level Models": "Model Tingkat Atas",
@@ -941,5 +942,6 @@
   "To claim the reward, you must first complete user verification !": "Untuk mengklaim hadiah, Anda harus terlebih dahulu menyelesaikan verifikasi pengguna !",
   "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Saldo DBC tidak mencukupi. Anda perlu memiliki setidaknya 0,01 DBC di dompet Anda.",
   "Failed to send transaction !": "Gagal mengirim transaksi!",
-  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Saldo DGC tidak cukup untuk membayar. Anda dapat mengundang teman untuk mendapatkan 3000 DGC."
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Saldo DGC tidak cukup untuk membayar. Anda dapat mengundang teman untuk mendapatkan 3000 DGC.",
+  "It seems that you are offline. Please reconnect to send messages.": "Sepertinya Anda sedang offline. Harap sambung kembali untuk mengirim pesan."
 }
