--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -909,6 +909,7 @@
   "Year": "년",
   "Instant Savings": "즉시 절약",
   "Current Status": "현재 상태",
+  "Basic Model": "기본 모델",
   "Foundation Models": "기반 모델",
   "Advanced Models": "고급 모델",
   "Top-Level Models": "최상위 모델",
@@ -941,5 +942,6 @@
   "To claim the reward, you must first complete user verification !": "보상을 받으려면 먼저 사용자 인증을 완료해야 합니다 !",
   "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "DBC 잔액이 부족합니다. 지갑에 최소 0.01 DBC가 필요합니다.",
   "Failed to send transaction !": "거래 전송 실패!",
-  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "DGC 잔액이 부족합니다. 친구를 초대하면 3000 DGC를 얻을 수 있습니다."
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "DGC 잔액이 부족합니다. 친구를 초대하면 3000 DGC를 얻을 수 있습니다.",
+  "It seems that you are offline. Please reconnect to send messages.": "오프라인 상태인 것 같습니다. 메시지를 보내려면 다시 연결하세요."
 }
