--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -907,6 +907,7 @@
   "Year": "Jahr",
   "Instant Savings": "Sofortige Einsparungen",
   "Current Status": "Aktueller Status",
+  "Basic Model": "Basis-Modell",
   "Foundation Models": "Grundmodelle",
   "Advanced Models": "Fortgeschrittene Modelle",
   "Top-Level Models": "Top-Level-Modelle",
@@ -939,5 +940,6 @@
   "To claim the reward, you must first complete user verification !": "Um die Belohnung zu erhalten, müssen Sie zuerst die Benutzerüberprüfung abschließen !",
   "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Der DBC-Kontostand ist unzureichend. Sie benötigen mindestens 0,01 DBC in Ihrer Wallet.",
   "Failed to send transaction !": "Transaktion fehlgeschlagen!",
-  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Der DGC-Kontostand reicht nicht aus. Sie können einen Freund einladen, um 3000 DGC zu erhalten."
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Der DGC-Kontostand reicht nicht aus. Sie können einen Freund einladen, um 3000 DGC zu erhalten.",
+  "It seems that you are offline. Please reconnect to send messages.": "Sie scheinen offline zu sein. Bitte verbinden Sie sich erneut, um Nachrichten zu senden."
 }
