--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -908,6 +908,7 @@
   "Year": "Année",
   "Instant Savings": "Économies Instantanées",
   "Current Status": "État Actuel",
+  "Basic Model": "Modelo Básico",
   "Foundation Models": "Modèles de Base",
   "Advanced Models": "Modèles Avancés",
   "Top-Level Models": "Modèles Haut de Gamme",
@@ -940,5 +941,6 @@
   "To claim the reward, you must first complete user verification !": "Para reclamar la recompensa, primero debes completar la verificación de usuario !",
   "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "El saldo de DBC es insuficiente. Necesitas tener al menos 0.01 DBC en tu monedero.",
   "Failed to send transaction !": "¡Error al enviar la transacción!",
-  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "El saldo de DGC no es suficiente para pagar. Puedes invitar a un amigo para obtener 3000 DGC."
+  "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "El saldo de DGC no es suficiente para pagar. Puedes invitar a un amigo para obtener 3000 DGC.",
+  "It seems that you are offline. Please reconnect to send messages.": "Parece que estás desconectado. Por favor, vuelve a conectarte para enviar mensajes."
 }
