--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -943,6 +943,8 @@
   "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "",
   "Failed to send transaction !": "",
   "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "",
-  "It seems that you are offline. Please reconnect to send messages.": ""
+  "It seems that you are offline. Please reconnect to send messages.": "",
+  "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "",
+  "Recharge DGC": ""
 }
 
