--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -942,5 +942,7 @@
   "DBC balance is insufficient. You need to have at least 0.01 DBC in your wallet balance.": "Недостаточно DBC. На вашем кошельке должно быть не менее 0,01 DBC.",
   "Failed to send transaction !": "Ошибка отправки транзакции!",
   "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Недостаточно средств на балансе DGC. Вы можете пригласить друга, чтобы получить 3000 DGC.",
-  "It seems that you are offline. Please reconnect to send messages.": "Кажется, вы не в сети. Пожалуйста, переподключитесь, чтобы отправлять сообщения."
+  "It seems that you are offline. Please reconnect to send messages.": "Кажется, вы не в сети. Пожалуйста, переподключитесь, чтобы отправлять сообщения.",
+  "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "Недостаточно DGC, необходимо приобрести дополнительно {{ num }} DGC. После успешной покупки DGC обновитесь до VIP.",
+  "Recharge DGC": "Пополнить DGC"
 }
