--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -945,5 +945,7 @@
   "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "O saldo de DGC não é suficiente para pagar. Você pode convidar um amigo para obter 3000 DGC.",
   "It seems that you are offline. Please reconnect to send messages.": "Parece que você está offline. Por favor, reconecte-se para enviar mensagens.",
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "A quantidade de DGC é insuficiente, é necessário comprar {{ num }} DGC adicionais. Após a compra de DGC ser concluída, atualize para VIP.",
-  "Recharge DGC": "Recarregar DGC"
+  "Recharge DGC": "Recarregar DGC",
+  "Time expired": "Tempo expirado",
+  "QR code is invalid": "O código QR é inválido"
 }
