--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -945,6 +945,8 @@
   "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "",
   "It seems that you are offline. Please reconnect to send messages.": "",
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "",
-  "Recharge DGC": ""
+  "Recharge DGC": "",
+  "Time expired": "",
+  "QR code is invalid": ""
 }
 
