--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -944,5 +944,7 @@
   "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "El saldo de DGC no es suficiente para pagar. Puedes invitar a un amigo para obtener 3000 DGC.",
   "It seems that you are offline. Please reconnect to send messages.": "Parece que estás desconectado. Por favor, vuelve a conectarte para enviar mensajes.",
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "La cantidad de DGC es insuficiente, se deben comprar {{ num }} DGC adicionales. Una vez que la compra de DGC sea exitosa, actualice a VIP.",
-  "Recharge DGC": "Recargar DGC"
+  "Recharge DGC": "Recargar DGC",
+  "Time expired": "Tiempo expirado",
+  "QR code is invalid": "El código QR no es válido"
 }
