--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -944,5 +944,7 @@
   "The DGC balance is not enough to pay. You can invite a friend to obtain 3000 DGC.": "Недостаточно средств на балансе DGC. Вы можете пригласить друга, чтобы получить 3000 DGC.",
   "It seems that you are offline. Please reconnect to send messages.": "Кажется, вы не в сети. Пожалуйста, переподключитесь, чтобы отправлять сообщения.",
   "The amount of DGC is insufficient, an additional {{ num }} DGC needs to be purchased. After the DGC purchase is successful, upgrade to VIP.": "Недостаточно DGC, необходимо приобрести дополнительно {{ num }} DGC. После успешной покупки DGC обновитесь до VIP.",
-  "Recharge DGC": "Пополнить DGC"
+  "Recharge DGC": "Пополнить DGC",
+  "Time expired": "Время истекло",
+  "QR code is invalid": "QR-код недействителен"
 }
